--- a/app/views/poseshaemost/_result.html.erb
+++ b/app/views/poseshaemost/_result.html.erb
@@ -1,14 +1,26 @@
 <div id='result_container'>
-<h2><%=@user.name%></h2>
+<h2><%#=@user.name%></h2>
 
 
   <table class="table table-striped table-hover">
-    <th>Subject </th>
+    <th><%= @pred%> </th>
     <% 7.times do %>
       <th> <%= @i += 1 %> </th>
     <% end %>
+    
+  <%= form_with model: @studs, url: creatus_path do |form| %>
 
-<%= form_with model: @user, url: creatus_path do |form| %>
+    <% @studs.each do |qr| %>
+    <tr>
+      <td><%= qr.user.name %></td>
+      <% qr.list.where(predmet_id: Predmet.find_by(name: @pred)).first.jresult.each do |we| %> 
+      <td><%= form.label we %></td>
+    <% end %>
+
+    <td> <%= qr.list.where(predmet_id: Predmet.find_by(name: @pred)).first.jresult.sum %> </td>
+    </tr> 
+    <% end %>
+
 
 
 
