--- a/app/views/poseshaemost/_result.html.erb
+++ b/app/views/poseshaemost/_result.html.erb
@@ -7,7 +7,7 @@
     <% 7.times do %>
       <th> <%= @i += 1 %> </th>
     <% end %>
-    
+    <th> edit </th>
   <%= form_with model: @studs, url: creatus_path do |form| %>
 
     <% @studs.each do |qr| %>
@@ -18,6 +18,16 @@
     <% end %>
 
     <td> <%= qr.list.where(predmet_id: Predmet.find_by(name: @pred)).first.jresult.sum %> </td>
+    <td>
+    <% if Current.user.role == 'admin' %>
+      <%= link_to "admin", root_path %>
+    <% elsif Current.user.role == 'teacher' && Current.user.teach.first.predmet.name == @pred %>
+      <%= link_to "teach", profile_path(Current.user.id) %>
+    <% else %>
+      <%= link_to "stud", schedule_path %>
+    <% end %>
+    </td>
+
     </tr> 
     <% end %>
 
