--- a/app/views/poseshaemost/_result.html.erb
+++ b/app/views/poseshaemost/_result.html.erb
@@ -1,35 +1,43 @@
 <div id='result_container'>
-<h2><%#=@user.name%></h2>
-
 
   <table class="table table-striped table-hover">
     <th><%= @pred%> </th>
-    <% 7.times do %>
+    <% 6.times do %>
       <th> <%= @i += 1 %> </th>
     <% end %>
+    <th> Final </th>
     <th> edit </th>
-  <%= form_with model: @studs, url: creatus_path do |form| %>
+  <%#= form_with model: @studs, url: posetion_edit_path do |form| %>
 
     <% @studs.each do |qr| %>
     <tr>
       <td><%= qr.user.name %></td>
-      <% qr.list.where(predmet_id: Predmet.find_by(name: @pred)).first.jresult.each do |we| %> 
-      <td><%= form.label we %></td>
-    <% end %>
 
-    <td> <%= qr.list.where(predmet_id: Predmet.find_by(name: @pred)).first.jresult.sum %> </td>
-    <td>
-    <% if Current.user.role == 'admin' %>
-      <%= link_to "admin", root_path %>
-    <% elsif Current.user.role == 'teacher' && Current.user.teach.first.predmet.name == @pred %>
-      <%= link_to "teach", profile_path(Current.user.id) %>
-    <% else %>
-      <%= link_to "stud", schedule_path %>
-    <% end %>
+        <% qr.list.where(predmet_id: Predmet.find_by(name: @pred)).first.jresult.each do |we| %> 
+          <td><%= we %></td>
+        <% end %>
+
+      <td> 
+      <% su = 0 %>
+      <% qr.list.where(predmet_id: Predmet.find_by(name: @pred)).first.jresult.each do |i| su += i.to_i end%> <%= su %> 
+        
+    </td>
+      <td>
+      
+      <%= form_with url: posetion_edit_path(id: qr.user.id, predmet_id: Predmet.find_by(name: @pred).id ) do |form| %>
+        <% if Current.user.role == 'admin' %>
+          <%= form.submit value: "Show", class: "btn btn-info" %>
+        <% elsif Current.user.role == 'teacher' && Current.user.teach.first.predmet.name == @pred %>
+          <%= link_to "teach", profile_path(Current.user.id) %>
+        <% else %>
+          <%= link_to "stud", schedule_path %>
+        <% end %>
+      <% end %>
+
     </td>
 
     </tr> 
-    <% end %>
+    <%# end %>
 
 
 
