edited some errors in admin and c_role

--- a/app/views/poseshaemost/open.turbo_stream.erb
+++ b/app/views/poseshaemost/open.turbo_stream.erb
@@ -1,1 +1,4 @@
-<%= turbo_stream.replace "result_container", partial: 'result'%>
+<% if params[:name] == '' %>
+<% else %>
+  <%= turbo_stream.replace "result_container", partial: 'result'%>
+<% end %>
