added subject editing

--- a/app/views/administration/edit.html.erb
+++ b/app/views/administration/edit.html.erb
@@ -11,6 +11,7 @@
         <%= form.submit "Edit", class: "btn btn-success" %>
         <%= form.submit "Delete",data: { turbo_confirm: 'Are you shure of deleting' }, class: "btn btn-danger" %>
         <%= form.submit "Create", class: "btn btn-warning" %>
+        <%= form.submit "Edit Subject", class: "btn btn-warning" %>
     </div>
 
 
