--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-center justify-content-center">
-  <h1>welcome to schedule</h1>
+  <h1><%= t('menu.home')%></h1>
 </div>
 
 <%# 
