--- a/app/views/administration/edit.html.erb
+++ b/app/views/administration/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Admin page</h1>
+<h1> <%= t('.title') %> </h1>
     <%= form_with model: @user, url: admin_role_path(id: params[:id], role: params[:role]) do |form| %>
 
 
@@ -8,25 +8,25 @@
     </div>
 
     <div class="mb-3">
-        <%= form.submit "Edit", class: "btn btn-success" %>
-        <%= form.submit "Delete",data: { turbo_confirm: 'Are you shure of deleting' }, class: "btn btn-danger" %>
-        <%= form.submit "Create", class: "btn btn-warning" %>
-        <%= form.submit "Edit Subject", class: "btn btn-warning" %>
+        <%= form.submit "#{t('.sub1')}", class: "btn btn-success" %>
+        <%= form.submit "#{t('.sub2')}",data: { turbo_confirm: 'Are you shure of deleting' }, class: "btn btn-danger" %>
+        <%= form.submit "#{t('.sub3')}", class: "btn btn-warning" %>
+        <%= form.submit "#{t('.sub4')}", class: "btn btn-warning" %>
     </div>
 
 
   <table class="table">
     <th>
-      Id
+      <%= t('.id') %> 
     </th>
     <th>
-      Name
+      <%= t('.name') %> 
     </th>
     <th>
-      Email
+      <%= t('.email') %> 
     </th>
     <th>
-      Role
+      <%= t('.role') %>  
     </th>
 
     <% @users_ids.each do |i|%>
