--- a/app/views/editrole/new.html.erb
+++ b/app/views/editrole/new.html.erb
@@ -6,8 +6,8 @@
   </div>
 
   <div class="mb-3">
-      <%= form.submit "Save", class: "btn btn-success" %>
-      <%= link_to "back", administration_path , class: "btn btn-warning" %>
+      <%= form.submit "#{t('ed_subject.edit.sub1')}", class: "btn btn-success" %>
+      <%= link_to "#{t('ed_subject.edit.sub2')}", administration_path , class: "btn btn-warning" %>
 
   </div>
 <% end %>
