--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,12 +1,12 @@
-<h1>Forgot your password?</h1>
+<h1> <%= t('.title') %> </h1>
   <%= form_with url: password_reset_path do |form| %>
 
     <div class="mb-3">
-      <%= form.label :email %>
+      <%= form.label value = t('.email') %>
       <%= form.text_field :email, class: "form-control", placeholder: "student@bmstu.ru" %>
     </div>
 
     <div class="mb-3">
-      <%= form.submit "Reset Password", class: "btn btn-primary" %>
+      <%= form.submit "#{t('.sub1')}", class: "btn btn-primary" %>
     </div>
 <% end %>
