--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Password</h1>
+<h1><%= t('.title') %></h1>
   <%= form_with model: Current.user, url: edit_password_path do |form| %>
     <% if form.object.errors.any? %>
       <div class="alert alert-danger">
@@ -10,15 +10,15 @@
 
     <div id="try"></div>
     <div class="mb-3">
-      <%= form.label :password %>
+      <%= form.label value = t('.pass') %>
       <%= form.password_field :password, class: "form-control", placeholder: "password"%>
     </div>
     <div class="mb-3">
-      <%= form.label :password_confirmation %>
+      <%= form.label value = t('.pass_con') %>
       <%= form.password_field :password_confirmation, class: "form-control", placeholder: "password" %>
     </div>
 
     <div class="mb-3">
-      <%= form.submit "Edit Password", class: "btn btn-primary" %>
+      <%= form.submit "#{t('.sub1')}", class: "btn btn-primary" %>
     </div>
 <% end %>
