--- a/app/views/poseshaemost/_edit_form.html.erb
+++ b/app/views/poseshaemost/_edit_form.html.erb
@@ -3,7 +3,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Успеваемость</h5>
+          <h5 class="modal-title" id="exampleModalLabel"><%= t('.title') %></h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         
@@ -14,24 +14,24 @@
               <% sum += ind.to_i %>
             <% end %>
             <% if sum > 25%>
-              <div> Ваша оценка: "5", при баллах: <%= sum %> </div>
+              <div> <%= t('.text1') %> <%= sum %> </div>
           <% elsif sum > 21 %>
-              <div> Ваша оценка: "4", при баллах: <%= sum %> <br> Вам не хватает <%= 25-sum %> баллов до оценки "5" </div>
+              <div> <%= t('.text2') %> <%= sum %> <br> <%= t('.text5') %> <%= 25-sum %> <%= t('.text6') %> </div>
           <% elsif sum > 18 %>
-              <div> Ваша оценка: "3", при баллах: <%= sum %> <br> Вам не хватает <%= 21-sum %> баллов до оценки "4" </div>
+              <div> <%= t('.text3') %> <%= sum %> <br> <%= t('.text5') %> <%= 21-sum %> <%= t('.text7') %> </div>
           <% elsif sum < 18 %>
-              <div> Ваша оценка: неуд, при баллах: <%= sum %> <br> Вам не хватает <%= 18-sum %> баллов до оценки "3" </div>
+              <div> <%= t('.text4') %> <%= sum %> <br> <%= t('.text5') %> <%= 18-sum %> <%= t('.text8') %></div>
           <% end %>
 
           <% else %>
             <%= form_with url: posit_path(name: Predmet.find_by(id: params[:predmet_id]).name, id: User.find_by(id: params[:id]).stud.first.id) do |form| %>
               <% @new_model.jresult.each_with_index do |ind, index| %> 
                 <div>
-                  <%= if index.even? then (form.label :"rk#{@i_rk += 1}") else (form.label :"dz#{@i_dz += 1}") end%>
+                  <%= if index.even? then (form.label value = "#{t('.dz')}#{@i_dz += 1}") else (form.label value = "#{t('.rk')}#{@i_rk += 1}") end%>
                   <%= form.number_field :"fs#{index}", max: 5, min: 1, value: ind, class: "form-control" %>
                 </div>
               <% end %>
-              <%= form.submit value: "Edit", class: "btn btn-info", data: {action: "click->bs-modal#submitEnd" }  %>
+              <%= form.submit value: "#{t('.sub1')}", class: "btn btn-info", data: {action: "click->bs-modal#submitEnd" }  %>
             <% end %>
           <% end %>
         </div>
