--- a/app/views/poseshaemost/show.html.erb
+++ b/app/views/poseshaemost/show.html.erb
@@ -1,10 +1,10 @@
-<h1>Poseshaemost</h1>
+<h1><%= t('.title') %></h1>
 
   <%= form_with url: posit_path do |f| %>
     <%= f.select :name, @list_pred, include_blank: true %>
     <br>
     <br>
-    <%= f.submit value: "Show", class: "btn btn-info" %>
+    <%= f.submit value: "#{t('.sub')}", class: "btn btn-info" %>
   <% end %>
 
 <div id='result_container'></div>
