--- a/app/views/schedule/_result.html.erb
+++ b/app/views/schedule/_result.html.erb
@@ -3,7 +3,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel"> <%= t('.title') %> </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       
@@ -12,16 +12,16 @@
   <h2><%=@pred.first.day%></h2>
     <table class="table table-striped table-hover">
       <th>
-        Time
+        <%= t('.time') %>
       </th>
       <th>
-        Name
+        <%= t('.name') %>
       </th>
       <th>
-        Teacher
+        <%= t('.teacher') %>
       </th>
       <th>
-        Homework
+        <%= t('.homework') %>
       </th>
 
       <% @pred.each do |par| %>
@@ -40,7 +40,7 @@
   </div>
   <% else %>
   <div class="container">
-  <h1> ВЫХОДНОЙ </h1>
+  <h1> <%= t('.holid') %> </h1>
   </div>
       <% end %>
 
