--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,62 +1,84 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <%= link_to "Home", root_path, class: "navbar-brand" %> 
+    <%= link_to t('nav.home'), root_path, class: "navbar-brand" %> 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <%= link_to "Schedule", schedule_path, class: "nav-link" %> 
+          <%= link_to t('nav.schedule'), schedule_path, class: "nav-link" %> 
         </li>
       </ul>
 
       <ul class="navbar-nav ms-auto mb-2 mb-log-0">
+            <ul class="nav col-12 col-lg-auto md-2 mb-md-0">
+        <li class="dropdown" >
+          <%= link_to '#', class: 'nav-link px-2 dropdown-toggle text-white',
+          data: {"bs-toggle": 'dropdown'} do %>
+          <%= tag.div '', class: "flag #{I18n.locale}-flag mt-1" %>
+          <%= t I18n.locale %>
+        <% end %>
+
+        <ul class= "dropdown-menu">
+          <% I18n.available_locales.each do |locale| %>
+          <li>
+          <% if I18n.locale == locale %>
+            <%= tag.span t(locale), class: 'dropdown-item' %>
+          <% else %>
+            <%= link_to t(locale), root_path(locale: locale),
+              class: 'dropdown-item' %>
+        <% end %>
+          </li>
+        <% end %>
+        </ul>
+        </ul>
+
         <% if Current.user.present? %>
           <% if Current.user.role == "admin" %>
             <li class="nav-item">
-            <%= link_to Current.user.role, profile_path(id: Current.user.id), class: "nav-link" %>   <%# edit_password_path %>
+            <%= link_to Current.user.email, profile_path(id: Current.user.id), class: "nav-link" %>   <%# edit_password_path %>
             </li>
             <li class="nav-item">
-              <%= link_to "edit prava", administration_path,  class: "btn btn-outline-success me-2" %>
+              <%= link_to t('nav.prava'), administration_path,  class: "btn btn-outline-success me-2" %>
             </li>
             <li class="nav-item">
-              <%= link_to "poseshaimost", posetion_path,  class: "btn btn-outline-success me-2" %>
+              <%= link_to t('nav.posesh'), posetion_path,  class: "btn btn-outline-success me-2" %>
             </li>
             <li class="nav-item">
-              <%= button_to "Logout", logout_path, method: :delete,  class: "btn btn-outline-danger" %>
+              <%= button_to t('nav.logout'), logout_path, method: :delete,  class: "btn btn-outline-danger" %>
             </li>
           <% else %>
             <% if Current.user.role == "teacher" %>
               <li class="nav-item">
-                <%= link_to Current.user.role, profile_path(id: Current.user.id), class: "nav-link" %>   <%# edit_password_path %>
+                <%= link_to Current.user.email, profile_path(id: Current.user.id), class: "nav-link" %>   <%# edit_password_path %>
               </li>
               <li class="nav-item">
-                <%= link_to "Посещаемость", posetion_path(id: Current.user.id),  class: "btn btn-outline-success me-2" %>
+                <%= link_to t('nav.posesh'), posetion_path(id: Current.user.id),  class: "btn btn-outline-success me-2" %>
               </li>
               <li class="nav-item">
-                <%= button_to "Logout", logout_path, method: :delete,  class: "btn btn-outline-danger" %>
+                <%= button_to t('nav.logout'), logout_path, method: :delete,  class: "btn btn-outline-danger" %>
               </li>
             <% else %>
               <% if Current.user.role == "student" %>
                 <li class="nav-item">
-                  <%= link_to Current.user.role, profile_path(id: Current.user.id), class: "nav-link" %>   <%# edit_password_path %>
+                  <%= link_to Current.user.email, profile_path(id: Current.user.id), class: "nav-link" %>   <%# edit_password_path %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to "Посещаемость", posetion_path(id: Current.user.id),  class: "btn btn-outline-success me-2" %>
+                  <%= link_to t('nav.posesh'), posetion_path(id: Current.user.id),  class: "btn btn-outline-success me-2" %>
                 </li>
                 <li class="nav-item">
-                  <%= button_to "Logout", logout_path, method: :delete,  class: "btn btn-outline-danger" %>
+                  <%= button_to t('nav.logout'), logout_path, method: :delete,  class: "btn btn-outline-danger" %>
                 </li>
               <% end %>
             <% end %>
           <% end %>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Login", sign_in_path, data: {controller: "user-modal"},  class: "nav-link"%>
+            <%= link_to t('nav.login'), sign_in_path, data: {controller: "user-modal"},  class: "nav-link"%>
           </li>
           <li class="nav-item">
-            <%= link_to "Sign Up", sign_up_path, data: {controller: "user-modal"},  class: "nav-link"%>
+            <%= link_to t('nav.signup'), sign_up_path, data: {controller: "user-modal"},  class: "nav-link"%>
           </li>
         <% end %>
       </ul>
