added edeting subjects

--- a/app/views/administration/edit.html.erb
+++ b/app/views/administration/edit.html.erb
@@ -12,6 +12,7 @@
         <%= form.submit "#{t('.sub2')}",data: { turbo_confirm: 'Are you shure of deleting' }, class: "btn btn-danger" %>
         <%= form.submit "#{t('.sub3')}", class: "btn btn-warning" %>
         <%= form.submit "#{t('.sub4')}", class: "btn btn-warning" %>
+        <%= form.submit "#{t('.sub5')}", class: "btn btn-warning" %>
     </div>
 
 
