--- a/app/views/ed_subject/edit.html.erb
+++ b/app/views/ed_subject/edit.html.erb
@@ -1,28 +1,23 @@
 <%= form_with model: @user, url: ed_sub_path(id: params[:id], fr_pe: @free_prep) do |form| %>
+  <table>
+    <tr>
+      <div class="mb-3">
+        <td> <%= form.label value = t('.subject') %> </td>
+        <td> <%= form.text_field :subj %> </td>
+      </div>
+    </tr>
+    <tr>
+      <div class="mb-3">
+        <td> <%= form.label value = t('.prepod') %> </td>
+        <td> <%= form.select :prepodovat, @free_prep.each, include_blank: true %> </td>
+      </div>
+    </tr>
+    <tr>
+      <div class="mb-3">
+        <td> <%= form.submit "#{t('.sub1')}", class: "btn btn-success" %> </td>
+        <td> <%= link_to "#{t('.sub2')}", administration_path , class: "btn btn-warning" %> </td>
+      </div>
+    </tr>
+  </table>
 
-  <div class="mb-3">
-    <%= form.label value = t('.subject') %>
-    <%= form.text_field :subj %>
-  </div>
-
-  <div class="mb-3">
-    <%= form.label value = t('.day') %>
-    <%= form.text_field :day %>
-  </div>
-
-  <div class="mb-3">
-    <%= form.label value = t('.time') %>
-    <%= form.text_field :time %>
-  </div>
-
-  <div class="mb-3">
-    <%= form.label value = t('.prepod') %>
-    <%= form.select :prepodovat, @free_prep.each, include_blank: true %>
-  </div>
-
-  <div class="mb-3">
-      <%= form.submit "#{t('.sub1')}", class: "btn btn-success" %>
-      <%= link_to "#{t('.sub2')}", administration_path , class: "btn btn-warning" %>
-
-  </div>
 <% end %>
