--- a/app/views/registrations/_form_modal.html.erb
+++ b/app/views/registrations/_form_modal.html.erb
@@ -36,7 +36,7 @@
     </div>
       <div class="modal-footer">
 
-      <%= form.submit "#{t('.sub')}", class: "btn btn-primary", data: {action: "click->bs-modal#submitEnd" } %>
+      <%= form.submit "#{t('.sub')}", class: "btn btn-primary", data: {action: "click->bs-modal#submitEnd" }, id: 'reg-btn' %>
       </div>
 <% end %>
     </div>
