--- a/app/views/schedule/bmstu_schedule.html.erb
+++ b/app/views/schedule/bmstu_schedule.html.erb
@@ -4,7 +4,7 @@
   <%= f.select :day, @week_days, include_blank: true, class: "form-select" %>
   <br>
   <br>
-  <%= f.submit value: "#{t('.submi')}", class: "btn btn-info" %>
+  <%= f.submit value: "#{t('.submi')}", class: "btn btn-info", id: 'show_schedule-btn' %>
 <% end %>
 
 
