--- a/app/views/creatinguser/new.html.erb
+++ b/app/views/creatinguser/new.html.erb
@@ -34,7 +34,7 @@
     </div>
 
     <div class="mb-3">
-      <%= form.submit "#{t('.sub1')}", class: "btn btn-primary" %>
+      <%= form.submit "#{t('.sub1')}", class: "btn btn-primary", id: 'create_user-btn' %>
       <%= link_to "#{t('.sub2')}", administration_path , class: "btn btn-warning" %>
     </div>
     
