--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <%= link_to t('nav.schedule'), schedule_path, class: "nav-link" %> 
+          <%= link_to t('nav.schedule'), schedule_path, class: "nav-link", id: 'schedule-btn' %> 
         </li>
       </ul>
 
@@ -40,7 +40,7 @@
             <%= link_to Current.user.email, profile_path(id: Current.user.id), class: "nav-link" %>   <%# edit_password_path %>
             </li>
             <li class="nav-item">
-              <%= link_to t('nav.prava'), administration_path,  class: "btn btn-outline-success me-2" %>
+              <%= link_to t('nav.prava'), administration_path,  class: "btn btn-outline-success me-2", id: 'ed_roots-btn' %>
             </li>
             <li class="nav-item">
               <%= link_to t('nav.posesh'), posetion_path,  class: "btn btn-outline-success me-2" %>
@@ -68,17 +68,17 @@
                   <%= link_to t('nav.posesh'), posetion_path(id: Current.user.id),  class: "btn btn-outline-success me-2" %>
                 </li>
                 <li class="nav-item">
-                  <%= button_to t('nav.logout'), logout_path, method: :delete,  class: "btn btn-outline-danger" %>
+                  <%= button_to t('nav.logout'), logout_path, method: :delete,  class: "btn btn-outline-danger", id: 'logout-btn' %>
                 </li>
               <% end %>
             <% end %>
           <% end %>
         <% else %>
           <li class="nav-item">
-            <%= link_to t('nav.login'), sign_in_path, data: {controller: "user-modal"},  class: "nav-link"%>
+            <%= link_to t('nav.login'), sign_in_path, data: {controller: "user-modal"},  class: "nav-link", id: 'login-btn' %>
           </li>
           <li class="nav-item">
-            <%= link_to t('nav.signup'), sign_up_path, data: {controller: "user-modal"},  class: "nav-link"%>
+            <%= link_to t('nav.signup'), sign_up_path, data: {controller: "user-modal"},  class: "nav-link", id: 'sign_up-btn' %>
           </li>
         <% end %>
       </ul>
