--- a/app/views/profile/edit.html.erb
+++ b/app/views/profile/edit.html.erb
@@ -42,4 +42,4 @@
   <%= link_to "#{t('.sub2')}", edit_password_path %>
 <% end %>
 <br>
- <%= link_to "#{t('.sub1')}", schedule_path , class: "btn btn-warning" %>
+ <%= link_to "#{t('.sub1')}", schedule_path , class: "btn btn-warning", id: 'back-btn' %>
