--- a/app/views/ed_subject/edit.html.erb
+++ b/app/views/ed_subject/edit.html.erb
@@ -14,7 +14,7 @@
     </tr>
     <tr>
       <div class="mb-3">
-        <td> <%= form.submit "#{t('.sub1')}", class: "btn btn-success" %> </td>
+        <td> <%= form.submit "#{t('.sub1')}", class: "btn btn-success", id: 'edit_subj-btn' %> </td>
         <td> <%= link_to "#{t('.sub2')}", administration_path , class: "btn btn-warning" %> </td>
       </div>
     </tr>
