--- a/app/views/editrole/new.html.erb
+++ b/app/views/editrole/new.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div class="mb-3">
-      <%= form.submit "#{t('ed_subject.edit.sub1')}", class: "btn btn-success" %>
+      <%= form.submit "#{t('ed_subject.edit.sub1')}", class: "btn btn-success", id: 'change_role-btn' %>
       <%= link_to "#{t('ed_subject.edit.sub2')}", administration_path , class: "btn btn-warning" %>
 
   </div>
